Update project based on feedback

--- a/ml/udacity_nano_degree/machine-learning-projects/projects/boston_housing/boston_housing.ipynb
+++ b/ml/udacity_nano_degree/machine-learning-projects/projects/boston_housing/boston_housing.ipynb
@@ -267,7 +267,7 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "Yes as R2 score of 0.923 implies that 93% of the variance in target variable Y is predictable from X"
+    "R2 score of 0.923 implies that 93% of the variance in target variable Y is explained by model. Higher the R2, better model fits the data & hence strong correlation."
    ]
   },
   {
@@ -398,9 +398,9 @@
     "\n",
     "max_depth = 3\n",
     "\n",
-    "The learning curves (training and testing) converge to a score of around 0.8 as more training points are added. \n",
-    "Adding more points beyond 300 wouldn't have significant impact as the curves seemed to have more or less flattened by then. \n",
+    "Training score starts with near perfect score and decreases intitially as we add more data. But on the other hand, testing score starts at 0 and quickly keep getting better with data.The learning curves (training and testing) converge to a score of around 0.8 as more training points are added. \n",
     "\n",
+    "Adding more points beyond 300 wouldn't have significant impact as the curves seemed to have more or less flattened by then. \n",
     "Adding more data beyond that will increase the confidence in our model, though it may take longer to train the model."
    ]
   },
@@ -530,7 +530,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "When using model complexity graph to identify the model with just the right fit, we need to futher split the training data for cross validation. This decreases the effective training data size. We use k-fold cross-validation technique to overcome this by splitting the total data into k buckets and train the model k times, each time with a different testing set and finally averaging the score to get the final model\n",
+    "When using model complexity graph to identify the model with just the right fit, we need to futher split the training data for cross validation. This decreases the effective training data size. We use k-fold cross-validation technique to overcome this by splitting the total data into k buckets and train the model k times, each time with a different testing set (training using the remaining k-1 buckets for training) and finally averaging the score to get the final model\n",
     "\n",
     "\n",
     "Without the k-fold cross-validation, the results of the grid search could depend on the random choice of train, test sets. "
@@ -584,7 +584,7 @@
     "    regressor = DecisionTreeRegressor()\n",
     "\n",
     "    # TODO: Create a dictionary for the parameter 'max_depth' with a range from 1 to 10\n",
-    "    params = {'max_depth': range(1,10)}\n",
+    "    params = {'max_depth': range(1,11)}\n",
     "\n",
     "    # TODO: Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
     "    scoring_fnc = make_scorer(performance_metric)\n",
@@ -653,7 +653,7 @@
     "\n",
     "4\n",
     "\n",
-    "Answer is similar to one in Question 6\n"
+    "Answer is similar to one in Question 6 - picks 4 as GridSearch searches for estimator with highest validation score  on different data splits\n"
    ]
   },
   {
@@ -711,7 +711,131 @@
     "\n",
     "Recommended price Client 1 : \\$411,096.00, Client 2 : \\$219,961.54, Client 3 : \\$921,900.00\n",
     "\n",
-    "The prices seem sensible as agree with the intuition from Answer 1"
+    "The prices seem sensible as agree with the intuition from Answer 1\n",
+    "\n",
+    "Average MEDV value is around $450K, RM is 6.24, LSTAT is 12.94, PTRATIO is 18.5.\n",
+    "\n",
+    "Even if even assume other features are constant, MEDV ordering is same in all cases\n",
+    "\n",
+    "RM2 < RM1 < RM3               => MEDV2 < MEDV1 < MEDV3,\n",
+    "\n",
+    "LSTAT3 < LSTAT1 < LSTAT2      => MEDV2 < MEDV1 < MEDV3,\n",
+    "\n",
+    "PTRATIO3 < PTRATIO1< PTRATIO2 => MEDV2 < MEDV1 < MEDV3,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RM</th>\n",
+       "      <th>LSTAT</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <th>MEDV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>489.000000</td>\n",
+       "      <td>489.000000</td>\n",
+       "      <td>489.000000</td>\n",
+       "      <td>4.890000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6.240288</td>\n",
+       "      <td>12.939632</td>\n",
+       "      <td>18.516564</td>\n",
+       "      <td>4.543429e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.643650</td>\n",
+       "      <td>7.081990</td>\n",
+       "      <td>2.111268</td>\n",
+       "      <td>1.653403e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.561000</td>\n",
+       "      <td>1.980000</td>\n",
+       "      <td>12.600000</td>\n",
+       "      <td>1.050000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.880000</td>\n",
+       "      <td>7.370000</td>\n",
+       "      <td>17.400000</td>\n",
+       "      <td>3.507000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.185000</td>\n",
+       "      <td>11.690000</td>\n",
+       "      <td>19.100000</td>\n",
+       "      <td>4.389000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.575000</td>\n",
+       "      <td>17.120000</td>\n",
+       "      <td>20.200000</td>\n",
+       "      <td>5.187000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>8.398000</td>\n",
+       "      <td>37.970000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>1.024800e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               RM       LSTAT     PTRATIO          MEDV\n",
+       "count  489.000000  489.000000  489.000000  4.890000e+02\n",
+       "mean     6.240288   12.939632   18.516564  4.543429e+05\n",
+       "std      0.643650    7.081990    2.111268  1.653403e+05\n",
+       "min      3.561000    1.980000   12.600000  1.050000e+05\n",
+       "25%      5.880000    7.370000   17.400000  3.507000e+05\n",
+       "50%      6.185000   11.690000   19.100000  4.389000e+05\n",
+       "75%      6.575000   17.120000   20.200000  5.187000e+05\n",
+       "max      8.398000   37.970000   22.000000  1.024800e+06"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.describe()"
    ]
   },
   {
